[tool.poetry]
name = "pyimg4"
version = "0.0.0"
description = "A Python library/CLI tool for parsing Apple's Image4 format."
authors = ["m1stadev <adamhamdi31@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m1stadev/PyIMG4"
keywords = ["ios", "jailbreak", "iboot", "img4", "image4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry.scripts]
pyimg4 = "pyimg4.__main__:cli"

[tool.poetry.dependencies]
python = "^3.8"
asn1 = "^2.7.0"
click = "^8.1.7"
pycryptodome = "^3.18.0"
pylzss = "0.3.4"
lzfse = { version = "^0.4.2", markers = "sys_platform != 'darwin'" }
apple-compress = { version = "^0.2.3", markers = "sys_platform == 'darwin'" }
pytest = { version = "^8.1.1", optional = true }
remotezip = { version = "^0.12.3", optional = true }

[tool.poetry.extras]
test = ["pytest", "remotezip"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E722"]

[tool.ruff.format]
quote-style = "single"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/m1stadev/PyIMG4/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
