[project]
name = "pyimg4"
dynamic = ["version"]
description = "A Python library/CLI tool for parsing Apple's Image4 format."
authors = [{ name = "m1stadev", email = "adamhamdi31@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ios", "jailbreak", "iboot", "img4", "image4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "asn1>=2.7.0",
    "asn1<3.0.0",
    "click>=8.1.7",
    "pycryptodome>=3.18.0",
    "pylzss==0.3.4",
    "lzfse>=0.4.2; sys_platform != 'darwin'",
    "apple-compress>=0.2.3; sys_platform == 'darwin'",

]

[project.urls]
Repository = "https://github.com/m1stadev/PyIMG4"
"Bug Tracker" = "https://github.com/m1stadev/PyIMG4/issues"

[project.scripts]
pyimg4 = "pyimg4.__main__:cli"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.1.1",
    "remotezip>=0.12.3",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.poetry-dynamic-versioning]
vcs = "git"
style = "semver"
dirty = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E722"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
